crates/plotnik-lib/tests/02-parser/recovery_unclosed/nested_unclosed_skips_closed_pair.txt
Q = (a (b (c)
------------------ DIAGNOSTICS -------------------
error: missing closing `)`
 --> query.ptk:1:8
  |
1 | Q = (a (b (c)
  |        -^^^^^
  |        |
  |        node started here
  |
help: add `)` to close the node
